[gd_scene load_steps=7 format=3 uid="uid://c3vkx2fjlmgm1"]

[ext_resource type="Script" path="res://scripts/end_point.gd" id="1_lotb8"]
[ext_resource type="Texture2D" uid="uid://dvem1h60qjnrw" path="res://sprites/end icon/end1.png" id="2_fk01v"]
[ext_resource type="Texture2D" uid="uid://c43ja3ywxokf4" path="res://sprites/end icon/end2.png" id="3_kpaq6"]
[ext_resource type="Texture2D" uid="uid://dm1gywthiqbhh" path="res://sprites/end icon/end3.png" id="4_8laym"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6n3wq"]
radius = 25.5783

[sub_resource type="SpriteFrames" id="SpriteFrames_amch7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fk01v")
}, {
"duration": 1.0,
"texture": ExtResource("3_kpaq6")
}, {
"duration": 1.0,
"texture": ExtResource("4_8laym")
}],
"loop": true,
"name": &"endsprites",
"speed": 5.0
}]

[node name="EndPoint" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_lotb8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_6n3wq")

[node name="Icon" type="AnimatedSprite2D" parent="Area2D"]
scale = Vector2(0.0777395, 0.0777395)
sprite_frames = SubResource("SpriteFrames_amch7")
animation = &"endsprites"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
